--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
   <head>
-    <title>NASA PIC OF THE DAY</title>
+    <title>Imagem do Dia da NASA</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
+    <h1>Imagem do Dia da NASA</h1>
     <div id="imageContainer"></div>
 
     <script>
@@ -18,6 +19,7 @@
           const img = document.createElement("img");
           img.src = data.url;
           img.alt = data.title;
+          img.className = "fullScreen";
           document.getElementById("imageContainer").appendChild(img);
         })
         .catch(error => {
