--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <html>
   <head>
-    <title>Nasa pic of the day>
+    <title>NASA PIC OF THE DAY</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
-    <h1 id="title"></h1>
     <div id="imageContainer"></div>
 
     <script>
@@ -15,9 +14,6 @@
       fetch(API_URL)
         .then(response => response.json())
         .then(data => {
-          // Atualiza o título da página
-          document.getElementById("title").innerHTML = data.title;
-
           // Cria um elemento de imagem e o adiciona à página
           const img = document.createElement("img");
           img.src = data.url;
